<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_name">Arch Linux riscv64</string>

    <!-- Common -->
    <string name="cancel_label">Cancel</string>
    <string name="exit_label">Exit</string>
    <string name="ok_label">OK</string>

    <!-- Installer dialog -->
    <string name="installer_progress_message">Installing environment…\nBe patient…</string>
    <string name="installer_error_title">Installation failed</string>
    <string name="installer_error_body">Application was unable to install the runtime environment.</string>
    <string name="installer_error_try_again_button">Try again</string>

    <!-- Shared storage permission denial dialog -->
    <string name="storage_permission_denied_title">Storage permission denial</string>
    <string name="storage_permission_denied_body">You just have denied shared storage access permission, but the application cannot work without it.\n\nIf you do not allow access to your storage, please, uninstall the application.\n\nSorry.</string>
    
    <!-- Launcher dialog -->
    <string name="launcher_title">Menu</string>
    <string name="launcher_start_default">Launch</string>
    <string name="launcher_start_sandbox">Launch in sandbox mode</string>
    <string name="launcher_open_settings">Settings</string>
    <string name="launcher_open_help">Help</string>

    <!-- Context menu: main -->
    <string name="menu_copy_text">Copy</string>
    <string name="menu_paste_text">Paste</string>
    <string name="menu_more">More…</string>

    <!-- Context menu: more -->
    <string name="menu_show_help">Show help</string>
    <string name="menu_console_style">Terminal styling</string>
    <string name="menu_select_url">Select URL</string>
    <string name="menu_share_transcript">Share transcript</string>
    <string name="menu_reset_terminal">Reset</string>
    <string name="menu_toggle_back_is_escape">Remap key \&quot;back\&quot; to \&quot;escape\&quot;</string>
    <string name="menu_toggle_ignore_bell">Ignore bell character</string>

    <!-- Context menu: Fonts and Colors -->
    <string name="style_color_prompt">Choose color</string>
    <string name="style_font_prompt">Choose font</string>
    <string name="style_toast_install_failed">Failed to update terminal styling</string>

    <!-- Context menu: Select URL dialog -->
    <string name="select_url_dialog_title">Click URL to copy or long press to open</string>
    <string name="select_url_toast_no_found">No URLs found in the terminal</string>
    <string name="select_url_toast_copied_to_clipboard">URL was copied to clipboard</string>
    <string name="select_url_toast_cannot_open">Cannot open this URL</string>

    <!-- Context menu: Share transcript prompt -->
    <string name="share_transcript_file_name">alpine-term_transcript.txt</string>
    <string name="share_transcript_chooser_title">Send console transcript to:</string>

    <!-- Context menu: Reset terminal toast message -->
    <string name="reset_toast_notification">Terminal reset</string>

    <!-- Drawer -->
    <string name="button_toggle_soft_keyboard">Toggle keyboard</string>

    <!-- Drawer: Rename session dialog -->
    <string name="session_rename_title">Set session name</string>
    <string name="session_rename_positive_button">Set</string>

    <!-- Notification -->
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>

    <!-- Preference labels -->
    <string name="pref_cat_rvvm">RVVM</string>
    <string name="rvvm_ram_title">RAM</string>
    <string name="rvvm_ram_desc">Maximal amount of RAM that may be allocated for virtual machine.\n\nOptimal values are lower than half of physical RAM available on your device.</string>
    <string name="rvvm_ram_hint">Example: 2048M , 3G </string>
    <string name="disk_type_title">Disk Type</string>
    <string name="disk_type_desc">The type of the disk you want to use. Recommended NVMe, ATA is deprecated and for compatibility reasons</string>
    <string name="kernel_path_title">Kernel</string>
    <string name="kernel_path_desc">Path to the linux kernel image or the u-boot image. </string>
    <string name="kernel_path_hint">Leave empty to disable.</string>
    <string name="img_path_title">RVVM NVMe/ATA raw image</string>
    <string name="img_path_desc">Path to a disk image that will be used as a NVMe/ATA image.\n\n* Depending on usage, the image file can grow up to several gigabytes.</string>
    <string name="img_path_hint">/sdcard/arch.img</string>
    <string name="opensbi_path_title">OpenSBI Image</string>
    <string name="opensbi_path_desc">Path to the opensbi image.</string>
    <string name="opensbi_path_hint">/sdcard/opensbi.bin</string>
    <string name="jit_cache_title">JIT Cache</string>
    <string name="jit_cache_desc">The mem used for jitcache.\n\nLower than 1M will have a performance loss.\n\nRecommend larger tahn 64M</string>
    <string name="jit_cache_hint">64M</string>
    <string name="smp_core_title">SMP</string>
    <string name="smp_core_desc">SMP cores</string>
    <string name="smp_core_hint">4</string>
    <string name="kernel_cmdline_title">Kernel Command Line</string>
    <string name="kernel_cmdline_desc">The cmdline will be passed to the kernel</string>
    <string name="kernel_cmdline_hint">earlyprintk rw root=/dev/nvme0n1p1 rootwait rootfstype=ext4 LANG=en_US.UTF-8</string>

    <!-- Preference dialogs -->
    <string name="pref_dialog_invalid_file_path_title">Invalid file path specified</string>
    <string name="pref_dialog_invalid_file_path_body">One or more components are inaccessible at specified path.\n\nMake sure that file path is correct and you have write permissions.\n\nChanges are discarded.</string>
    <string name="pref_dialog_invalid_dns_ip_title">Invalid DNS IP</string>
    <string name="pref_dialog_invalid_dns_ip_body">You have entered an invalid IPv4 address of the DNS server.\n\nSuggested ones are:\n\n* 1.1.1.1\n* 4.2.2.1\n* 8.8.8.8\n* 206.67.220.220\n\nChanges are discarded.</string>
    <string name="pref_dialog_invalid_port_title">Invalid port number specified</string>
    <string name="pref_dialog_invalid_port_body">You have entered invalid port number.\n\nMinimal allowed port is %1$d and maximal is %2$d.\n\nChanges are discarded.</string>
    <string name="pref_dialog_fwd_invalid_port_title">Forwarding rule error</string>
    <string name="pref_dialog_fwd_invalid_rule">Rule: %s\n\nSyntax error.\n\nRule should be defined in the following format:\n\n(tcp|udp):{1024–65535}:{1–65535}\n\nMultiple rules should be separated by commas.</string>
    <string name="pref_dialog_fwd_invalid_external_port_body">Rule: %s\n\nYou have specified an invalid external port value.\n\nAllowed range for external port is 1024–65535.</string>
    <string name="pref_dialog_fwd_invalid_internal_port_body">Rule: %s\n\nYou have specified an invalid internal port value.\n\nAllowed range for internal port is 1–65535.</string>
    	<string name="app_name">archriscv-term:float</string>
        <string name="initial_instruction_toast">长按在窗口上移动\n\n长按在窗口上缩放手势,缩放窗口大小</string>
        <string name="after_long_press">拖动到指定位置\n\n缩放手势,缩放窗口大小</string>

    <string name="draw_overlay_permission_explanation">这个应用程序需要权限来绘制覆盖。</string>
    <string name="grant_permission">授予许可</string>

        <string name="notification_title">archriscv-term:Float</string>
        <string name="notification_message_visible">触摸隐藏窗口。</string>
    <string name="notification_message_hidden">触摸隐藏窗口。</string>
    <string name="exposed_ports_title">Exposed ports</string>
    <string name="exposed_ports_desc">A list of port forwarding rules. Each rule has the following format:\n\n{proto}/{external port}={internal port}\n\nYou can specify multiple rules by separating them with return.\n\nExternal ports lower than 1024 cannot be used.</string>
    <string name="exposed_ports_hint">tcp/8080=80, udp/5353=53, tcp/127.0.0.1:2022=22, etc…</string>

    <string name="exposed_ports_key">exposed_ports</string>

    <string name="paste_text">粘贴</string>
    <string name="copy_text">复制</string>
    <string name="text_selection_more">更多…</string>
    <!-- Preference keys -->
    <string name="disk_type_key">disk_type</string>
    <string name="rvvm_ram_key">rvvm_ram</string>
    <string name="smp_core_key">smp_core</string>
    <string name="jit_cache_key">jit_cache</string>
    <string name="kernel_path_key">kernel_path</string>
    <string name="img_path_key">img_path</string>
    <string name="opensbi_path_key">opensbi_path</string>
    <string name="kernel_cmdline_key">kernel_cmdline</string>
</resources>
