<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: default values are set in LauncherPreferences.initializeDefaults() -->

    <PreferenceCategory android:title="@string/pref_cat_rvvm">
        <EditTextPreference
            android:title="@string/rvvm_ram_title"
            android:summary="@string/rvvm_ram_desc"
            android:key="@string/rvvm_ram_key"
	    android:inputType="text|textNoSuggestions|textVisiblePassword"
	    android:maxLines="1"
            android:hint="@string/rvvm_ram_hint" />

        <EditTextPreference
            android:title="@string/img_path_title"
            android:summary="@string/img_path_desc"
            android:key="@string/img_path_key"
            android:inputType="text|textNoSuggestions|textVisiblePassword"
            android:maxLines="1"
            android:hint="@string/img_path_hint" />

        <EditTextPreference
            android:title="@string/opensbi_path_title"
            android:summary="@string/opensbi_path_desc"
            android:key="@string/opensbi_path_key"
            android:inputType="text|textNoSuggestions|textVisiblePassword"
            android:maxLines="1"
            android:hint="@string/opensbi_path_hint" />
        <EditTextPreference
            android:title="@string/kernel_path_title"
            android:summary="@string/kernel_path_desc"
            android:key="@string/kernel_path_key"
            android:inputType="text|textNoSuggestions|textVisiblePassword"
            android:maxLines="1"
            android:hint="@string/kernel_path_hint" />
    </PreferenceCategory>
</PreferenceScreen>
